<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"

    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/label_sign_in"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/gilroy_bold"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:padding="12dp"
        android:background="@color/colorTextBackgroud"
        android:textColor="@color/colorText"
        android:hint="@string/enter_email"
        android:fontFamily="@font/gilroy_light"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:padding="12dp"
        android:background="@color/colorTextBackgroud"
        android:textColor="@color/colorText"
        android:hint="@string/enter_password"
        android:id="@+id/etPassword"
        android:fontFamily="@font/gilroy_light"
        android:inputType="textPassword"
        />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/bnt_login"
            android:textColor="@color/colorAccent"
            android:id="@+id/bntLogin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"
            android:background="@color/colorText"
            android:text="@string/label_sign_up"
            android:textColor="@color/colorAccent"
            android:id="@+id/bntSignUp"/>
    </LinearLayout>
